--- a/pages/cn_photos.html
+++ b/pages/cn_photos.html
@@ -30,7 +30,7 @@
     </nav>
 
     <div class="gallery">
-        <h2>Photos</h2>
+        <h2>图片</h2>
         <div class="gallerys">
             <div class="gallery-image">
                 <img src="../photos/roofing_1.jpg" class="image" alt="">
@@ -79,6 +79,60 @@
             </div>
             <div class="gallery-image">
                 <img src="../photos/roofing_16.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_17.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_18.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_19.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_20.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_21.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_22.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_23.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_24.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_25.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_26.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_27.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_28.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_29.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_30.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_31.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_32.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_33.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_34.jpg" class="image" alt="">
             </div>
         </div>
 
