--- a/pages/en_photos.html
+++ b/pages/en_photos.html
@@ -81,13 +81,67 @@
             <div class="gallery-image">
                 <img src="../photos/roofing_16.jpg" class="image" alt="">
             </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_17.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_18.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_19.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_20.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_21.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_22.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_23.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_24.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_25.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_26.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_27.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_28.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_29.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_30.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_31.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_32.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_33.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_34.jpg" class="image" alt="">
+            </div>
         </div>
 
         <div class="popup">
             <!-- top bar -->
             <div class="top-bar">
                 <p class="image-name">img1.png</p>
-                <span class="close-btn"></span>
+                <span class="close-btn"><p>X</p></span>
             </div>
             <!-- arrows -->
             <button class="arrow-btn left-arrow"><img src="../imgs/arrow_left.png" alt=""></button>
