--- a/pages/cn_photos.html
+++ b/pages/cn_photos.html
@@ -33,94 +33,94 @@
         <h2>图片</h2>
         <div class="gallerys">
             <div class="gallery-image">
-                <img src="../photos/roofing_1.jpg" class="image" alt="">
+                <img src="../photos/roofing_1-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_2.jpg" class="image" alt="">
+                <img src="../photos/roofing_2-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_3.jpg" class="image" alt="">
+                <img src="../photos/roofing_3-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_4.jpg" class="image" alt="">
+                <img src="../photos/roofing_4-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_5.jpg" class="image" alt="">
+                <img src="../photos/roofing_5-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_6.jpg" class="image" alt="">
+                <img src="../photos/roofing_6-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_7.jpg" class="image" alt="">
+                <img src="../photos/roofing_7-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_8.jpg" class="image" alt="">
+                <img src="../photos/roofing_8-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_9.jpg" class="image" alt="">
+                <img src="../photos/roofing_9-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_10.jpg" class="image" alt="">
+                <img src="../photos/roofing_10-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_11.jpg" class="image" alt="">
+                <img src="../photos/roofing_11-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_12.jpg" class="image" alt="">
+                <img src="../photos/roofing_12-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_13.jpg" class="image" alt="">
+                <img src="../photos/roofing_13-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_14.jpg" class="image" alt="">
+                <img src="../photos/roofing_14-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_15.jpg" class="image" alt="">
+                <img src="../photos/roofing_15-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_16.jpg" class="image" alt="">
+                <img src="../photos/roofing_16-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_17.jpg" class="image" alt="">
+                <img src="../photos/roofing_17-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_18.jpg" class="image" alt="">
+                <img src="../photos/roofing_18-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_19.jpg" class="image" alt="">
+                <img src="../photos/roofing_19-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_20.jpg" class="image" alt="">
+                <img src="../photos/roofing_20-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_21.jpg" class="image" alt="">
+                <img src="../photos/roofing_21-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_22.jpg" class="image" alt="">
+                <img src="../photos/roofing_22-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_23.jpg" class="image" alt="">
+                <img src="../photos/roofing_23-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_24.jpg" class="image" alt="">
+                <img src="../photos/roofing_24-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_25.jpg" class="image" alt="">
+                <img src="../photos/roofing_25-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_26.jpg" class="image" alt="">
+                <img src="../photos/roofing_26-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_27.jpg" class="image" alt="">
+                <img src="../photos/roofing_27-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_28.jpg" class="image" alt="">
+                <img src="../photos/roofing_28-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_29.jpg" class="image" alt="">
+                <img src="../photos/roofing_29-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_30.jpg" class="image" alt="">
+                <img src="../photos/roofing_30-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
                 <img src="../photos/roofing_31.jpg" class="image" alt="">
