--- a/pages/cn_photos.html
+++ b/pages/cn_photos.html
@@ -123,16 +123,16 @@
                 <img src="../photos/roofing_30-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_31.jpg" class="image" alt="">
+                <img src="../photos/roofing_31-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_32.jpg" class="image" alt="">
+                <img src="../photos/roofing_32-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_33.jpg" class="image" alt="">
+                <img src="../photos/roofing_33-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_34.jpg" class="image" alt="">
+                <img src="../photos/roofing_34-min.jpg" class="image" alt="">
             </div>
         </div>
 
@@ -146,7 +146,7 @@
             <button class="arrow-btn left-arrow"><img src="../imgs/arrow_left.png" alt=""></button>
             <button class="arrow-btn right-arrow"><img src="../imgs/arrow_right.png" alt=""></button>
             <!-- image -->
-            <img src="../photos/roofing_1.jpg" class="large-image" alt="">
+            <img src="../photos/roofing_1-min.jpg" class="large-image" alt="">
             <!-- image index (can delete) -->
             <h1 class="index">01</h1>
         </div>
