--- a/pages/en_photos.html
+++ b/pages/en_photos.html
@@ -147,7 +147,7 @@
             <button class="arrow-btn left-arrow"><img src="../imgs/arrow_left.png" alt=""></button>
             <button class="arrow-btn right-arrow"><img src="../imgs/arrow_right.png" alt=""></button>
             <!-- image -->
-            <img src="../photos/roofing_1.jpg" class="large-image" alt="">
+            <img src="../photos/roofing_1-min.jpg" class="large-image" alt="">
             <!-- image index (can delete) -->
             <h1 class="index">01</h1>
         </div>
