--- a/pages/en_photos.html
+++ b/pages/en_photos.html
@@ -130,7 +130,7 @@
                 <img src="../photos/roofing_32-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_33-min.jpg" class="image" alt="">
+                <img src="../photos/roofing_33-min.JPG" class="image" alt="">
             </div>
             <div class="gallery-image">
                 <img src="../photos/roofing_34-min.jpg" class="image" alt="">
