--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Home | BlueLight Roofing Solutions</title>
 </head>
 <body>
+    <div class="backgroundImage"></div>
     <div class="serviceTop">
         <tr>
             <td>Service area:</td>
@@ -30,7 +31,7 @@
     </nav>
 
 <!-- =========================================CONTENT============================================= -->
-    <div class="introContent">
+    <div class="en_introContent">
         <h2>Welcome</h2>
         <div class="content">
             <p>
