--- a/pages/cn_index.html
+++ b/pages/cn_index.html
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <div class="introContent">
+    <div class="cn_introContent">
         <h2>欢迎</h2>
         <div class="content">
             <p>
