--- a/pages/en_contact.html
+++ b/pages/en_contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>Home | BlueLight Roofing Solutions</title>
 </head>
-<body>
+<body id="contactBody">
     <div class="serviceTop">
         <tr>
             <td>Service area:</td>
