--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
                 </tr>
                 <tr>
                     <td class="td2">Email:</td>
-                    <td>bluelightroofing@gamil.com</td>
+                    <td>bluelightroofing@gmail.com</td>
                 </tr>
                 <tr>
                     <td class="td3">Phone:</td>
