--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
     </div>
 
     <div class="footer-col">
-        <h4>Fifteen-Years Warranty</h4>
+        <h4>Ten Years Warranty</h4>
         <img src="imgs/warranty.png" class="tailleImg" alt="">
     </div>
 
     <div class="footer-col">
-        <h4>Ten years experience</h4>
+        <h4>Ten Years Experience</h4>
         <img src="imgs/experience.png" class="tailleImg2" alt="">
     </div>
 </div>
@@ -318,7 +318,7 @@
         processP5: "在完成项目之前，我们将进行交付前检查，以确保工作符合我们的高标准和您的期望。如果需要任何最终调整，我们将在此时进行。",
         wsib: "W.S.I.B 保险",
         liability: "屋顶保险",
-        warranty: "十五年保修",
+        warranty: "十年保修",
         experience: "十年经验"
     }
   };
