new photos code

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -135,6 +135,30 @@
             <div class="gallery-image">
                 <img src="../photos/roofing_34-min.jpg" class="image" alt="">
             </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_35-min.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_36-min.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_37-min.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_38-min.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_39-min.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_40-min.jpg" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_41-min.JPG" class="image" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="../photos/roofing_42-min.jpg" class="image" alt="">
+            </div>
         </div>
 
         <div class="popup">
