--- a/pages/photos.html
+++ b/pages/photos.html
@@ -154,7 +154,7 @@
                 <img src="../photos/roofing_40-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
-                <img src="../photos/roofing_41-min.JPG" class="image" alt="">
+                <img src="../photos/roofing_41-min.jpg" class="image" alt="">
             </div>
             <div class="gallery-image">
                 <img src="../photos/roofing_42-min.jpg" class="image" alt="">
